deployments/registry-gui/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-gui
  namespace: docker
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cr
spec:
  rules:
    - host: registry.rcomanne.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-gui
                port:
                  name: web
